Add metadata to DImg created from QImage-based loading methods to fix finding the correct exif orientation.

Since we make use of the database field, we need to compare the database value with the metadata value.
Images created with the preview loading methods had no metadata, so a wrong value was calculated.

BUG: 302212
FIXED-IN: 2.8.0